--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sprity-sass": "^1.0.4",
     "tether": "^1.4.4",
     "vue": "^2.5.16",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
