--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gm": "^1.23.1",
     "graceful-fs": "^4.1.11",
     "gulp-cssnano": "^2.1.3",
+    "gulp-vue-module": "^0.1.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "minimatch": "^3.0.4",
@@ -42,7 +43,7 @@
     "browser-sync": "^2.24.4",
     "browserify": "^16.2.2",
     "del": "^3.0.0",
-    "gulp": "^4.0.0",
+    "gulp": "^3.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-bootstrap-configurator": "^0.4.1",
@@ -60,7 +61,6 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5",
-    "gulp-vueify": "0.0.3",
     "gulplog": "^1.0.0",
     "imagemin-jpeg-recompress": "^5.1.0",
     "imagemin-pngquant": "^5.1.0",
