Фикс ошибок авторизации

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sprity-sass": "^1.0.4",
     "tether": "^1.4.4",
     "vue": "^2.5.16",
+    "vue-cookie": "^1.1.4",
     "vue-js-modal": "^1.3.15",
     "vue-popperjs": "^1.3.4",
     "vue-router": "^3.0.1",
