--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-js-modal": "^1.3.15",
     "vue-popperjs": "^1.3.4",
     "vue-router": "^3.0.1",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
