--- a/package.json
+++ b/package.json
@@ -1,32 +1,23 @@
 {
-  "name": "burberpizoni",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "burger-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "build-dev": "vue-cli-service build --mode development --dest public",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-vue": "^2.0.2",
-    "babelify": "^8.0.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
-    "buffertools": "^2.1.6",
-    "gm": "^1.23.1",
-    "graceful-fs": "^4.1.11",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-vue-module": "^0.1.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
-    "minimatch": "^3.0.4",
-    "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
-    "serialport": "^6.2.0",
-    "sprity-sass": "^1.0.4",
-    "tether": "^1.4.4",
+    "read-pkg": "^4.0.1",
+    "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
-    "vue-cli": "^2.9.6",
     "vue-cookie": "^1.1.4",
     "vue-js-modal": "^1.3.15",
     "vue-popperjs": "^1.3.4",
@@ -35,47 +26,16 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.0-rc.5",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.5",
+    "@vue/cli-plugin-pwa": "^3.0.0-rc.5",
+    "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.5",
     "vueify-insert-css": "^1.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-es2015-block-scoping": "^6.26.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "browser-sync": "^2.24.4",
-    "browserify": "^16.2.2",
-    "del": "^3.0.0",
-    "gulp": "^3.0.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-bootstrap-configurator": "^0.4.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-buffer": "0.0.2",
-    "gulp-cache": "^1.0.2",
-    "gulp-changed": "^3.2.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-modernizr": "^2.0.4",
-    "gulp-ng-annotate": "^2.1.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-requirejs": "^1.1.1",
-    "gulp-rigger": "^0.5.8",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.5",
-    "gulplog": "^1.0.0",
-    "imagemin-jpeg-recompress": "^5.1.0",
-    "imagemin-pngquant": "^5.1.0",
-    "run-sequence": "^2.2.1",
-    "sprity": "^1.0.8",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
-    "vueify": "^9.4.1"
-  },
-  "description": "",
-  "browser": {
-    "vue": "vue/dist/vue.common.js"
+    "@vue/cli-service": "^3.0.0-rc.5",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "chai": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.16"
   }
 }
