--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-dev": "vue-cli-service build --mode development --dest public",
+    "build-dev": "vue-cli-service build --mode development --dest ./public",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
