--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.16",
     "vue-cookie": "^1.1.4",
     "vue-js-modal": "^1.3.15",
+    "vue-perfect-scrollbar": "^0.1.0",
     "vue-popperjs": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-the-mask": "^0.11.1",
@@ -30,12 +31,12 @@
     "@vue/cli-plugin-eslint": "^3.0.0-rc.5",
     "@vue/cli-plugin-pwa": "^3.0.0-rc.5",
     "@vue/cli-plugin-unit-mocha": "^3.0.0-rc.5",
-    "vueify-insert-css": "^1.0.0",
     "@vue/cli-service": "^3.0.0-rc.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "vueify-insert-css": "^1.0.0"
   }
 }
