--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-dev": "vue-cli-service build --mode development --dest public --no-clean ",
+    "build": "vue-cli-service build --dest public/dest",
+    "build-dev": "vue-cli-service build --mode development --dest dist  && ncp dest public --limit 0",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
