--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --dest public/dest",
-    "build-dev": "vue-cli-service build --mode development --dest dist  && ncp dest public --limit 0",
+    "build-dev": "vue-cli-service build --mode development --dest dist  && ncp dist public --limit 0",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
