--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && ncp dist public --limit 0",
-    "build-dev": "vue-cli-service build --dest dist --mode development && ncp dist public --limit 0",
+    "build": "vue-cli-service build && ncp dist publish --limit 0",
+    "build-dev": "vue-cli-service build --dest dist --mode development && ncp dist publish --limit 0",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
