--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "currency-formatter": "^1.4.3",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
-    "popper.js": "^1.14.3",
+    "popper.js": "^1.14.4",
     "read-pkg": "^4.0.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
