--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "currency-formatter": "^1.4.3",
+    "fast-average-color": "^4.0.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "popper.js": "^1.14.4",
