--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "read-pkg": "^4.0.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-async-computed": "^3.4.1",
     "vue-cookie": "^1.1.4",
     "vue-js-modal": "^1.3.15",
     "vue-perfect-scrollbar": "^0.1.0",
