--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build && ncp dist publish --limit 0",
+    "build": "vue-cli-service build",
     "build-dev": "vue-cli-service build --dest public --mode development",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
