--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-async-computed": "^3.4.1",
+    "vue-click-outside": "^1.0.7",
     "vue-cookie": "^1.1.4",
     "vue-js-modal": "^1.3.15",
     "vue-perfect-scrollbar": "^0.1.0",
