--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "site2",
-  "version": "0.1.0",
+  "name": "burger-pizzoni",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "form-data": "^2.3.2",
     "lodash": "^4.17.10",
-    "node-cmd": "^3.0.0",
-    "optimist": "^0.6.1",
+    "v-mask": "^1.3.2",
     "vue": "^2.5.17",
     "vue-js-modal": "^1.3.18",
     "vue-router": "^3.0.1",
@@ -29,7 +27,10 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "form-data": "^2.3.2",
+    "node-cmd": "^3.0.0",
     "node-sass": "^4.9.0",
+    "optimist": "^0.6.1",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   }
