--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lodash": "^4.17.10",
     "v-mask": "^1.3.2",
     "vue": "^2.5.17",
+    "vue-click-outside": "^1.0.7",
     "vue-js-modal": "^1.3.18",
+    "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
